--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     </div>
 
     <div id="game" style="display: none;">
+        <button id="back">Назад</button>
         <div class="board" id="board"></div>
         <p id="status">Ходит: <span id="player">X</span></p>
         <button id="reset">Сбросить игру</button>
     </div>
 
+    <audio id="winSound" src="win.mp3"></audio>
+    <audio id="loseSound" src="lose.mp3"></audio>
+
     <script src="script.js"></script>
+    <script src="confetti.js"></script>
 </body>
 </html>
